# apple_orange_problem

./: CMakeLists.txt  data.c  data.h  font.c  font.h  main.c  main1.c  proc.c  proc.h  sem.c  sem.h  view.c  view.h
inc/: list.h  proc.h  sem.h  view.h
lib/: glad.c  list.c  list.h  math_3d.h  proc.c  sem.c  view.c
shader/: fontFragmentShader.glsl  fontVertexShader.glsl  font_fragment_shader.glsl  font_vertex_shader.glsl  fragmentShaderColor.glsl  fragmentShaderGray.glsl  fragmentShaderTexture.glsl  fragmentShaderTextures.glsl  vertexShader.glsl  vertex_shader.glsl
